--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.milyn</groupId>
+            <groupId>org.milyn.cartridges</groupId>
             <artifactId>smooks-misc-cartridge</artifactId>
             <version>2.0.0-SNAPSHOT</version>
             <scope>test</scope>
