--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,59 @@
 
     <groupId>org.smooks.cartridges</groupId>
     <artifactId>smooks-templating-cartridge</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-M1</version>
 
+    <name>Smooks Flat File Cartridge</name>
+    <url>https://www.smooks.org</url>
+
+    <description>The Smooks Templating Cartridge adds the ability to use templating technologies within the context of a
+        Smooks filtering process
+    </description>
+
+    <licenses>
+        <license>
+            <name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
+            <url>https://www.gnu.org/licenses/lgpl.txt</url>
+        </license>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git@github.com:smooks/smooks-templating-cartridge.git</connection>
+        <developerConnection>scm:git:git@github.com:smooks/smooks-templating-cartridge.git</developerConnection>
+        <url>git@github.com:smooks/smooks-templating-cartridge.git</url>
+    </scm>
+
+    <developers>
+        <developer>
+            <name>Smooks Developers</name>
+            <email>smooks-dev@googlegroups.com</email>
+        </developer>
+    </developers>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <gpg.skip>true</gpg.skip>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>xml-apis</groupId>
+                <artifactId>xml-apis</artifactId>
+                <version>1.4.01</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    
     <dependencies>
         <dependency>
             <groupId>org.smooks.cartridges</groupId>
             <artifactId>smooks-javabean-cartridge</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0-M1</version>
         </dependency>
         <dependency>
             <groupId>antlr</groupId>
@@ -60,7 +101,7 @@
         <dependency>
             <groupId>org.smooks.cartridges</groupId>
             <artifactId>smooks-misc-cartridge</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0-M1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -89,6 +130,17 @@
             </testResource>
         </testResources>
         <plugins>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.8</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>false</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>license-maven-plugin</artifactId>
@@ -204,6 +256,10 @@
     </repositories>
 
     <distributionManagement>
+        <repository>
+            <id>ossrh</id>
+            <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
         <snapshotRepository>
             <id>ossrh</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
