--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.smooks.cartridges</groupId>
     <artifactId>smooks-templating-cartridge</artifactId>
-    <version>2.0.0-M1</version>
+    <version>2.0.0-M2-SNAPSHOT</version>
 
     <name>Smooks Flat File Cartridge</name>
     <url>https://www.smooks.org</url>
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>org.smooks.cartridges</groupId>
             <artifactId>smooks-javabean-cartridge</artifactId>
-            <version>2.0.0-M1</version>
+            <version>2.0.0-M2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>antlr</groupId>
@@ -101,7 +101,7 @@
         <dependency>
             <groupId>org.smooks.cartridges</groupId>
             <artifactId>smooks-misc-cartridge</artifactId>
-            <version>2.0.0-M1</version>
+            <version>2.0.0-M2-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
