--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>smooks-templating-cartridge</artifactId>
     <version>2.0.0-M2-SNAPSHOT</version>
 
-    <name>Smooks Flat File Cartridge</name>
+    <name>Smooks Templating Cartridge</name>
     <url>https://www.smooks.org</url>
 
     <description>The Smooks Templating Cartridge adds the ability to use templating technologies within the context of a
