--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>org.smooks.cartridges</groupId>
             <artifactId>smooks-javabean-cartridge</artifactId>
-            <version>2.0.0-M2</version>
+            <version>2.0.0-M3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>antlr</groupId>
@@ -101,7 +101,7 @@
         <dependency>
             <groupId>org.smooks.cartridges</groupId>
             <artifactId>smooks-misc-cartridge</artifactId>
-            <version>2.0.0-M2</version>
+            <version>2.0.0-M3-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
