--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.smooks.cartridges</groupId>
     <artifactId>smooks-templating-cartridge</artifactId>
-    <version>2.0.0-M3</version>
+    <version>2.0.0-RC1-SNAPSHOT</version>
 
     <name>Smooks Templating Cartridge</name>
     <url>https://www.smooks.org</url>
