--- a/pom.xml
+++ b/pom.xml
@@ -44,21 +44,11 @@
         <gpg.skip>true</gpg.skip>
     </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>xml-apis</groupId>
-                <artifactId>xml-apis</artifactId>
-                <version>1.4.01</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-    
     <dependencies>
         <dependency>
             <groupId>org.smooks.cartridges</groupId>
             <artifactId>smooks-javabean-cartridge</artifactId>
-            <version>2.0.0-M3</version>
+            <version>2.0.0-RC1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>antlr</groupId>
@@ -79,6 +69,12 @@
             <groupId>xalan</groupId>
             <artifactId>xalan</artifactId>
             <version>2.7.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>xml-apis</groupId>
+                    <artifactId>xml-apis</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -101,7 +97,7 @@
         <dependency>
             <groupId>org.smooks.cartridges</groupId>
             <artifactId>smooks-misc-cartridge</artifactId>
-            <version>2.0.0-M3</version>
+            <version>2.0.0-RC1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
