--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,15 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.smooks</groupId>
+            <artifactId>smooks-core</artifactId>
+            <version>2.0.0-RC1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.smooks.cartridges</groupId>
             <artifactId>smooks-javabean-cartridge</artifactId>
             <version>2.0.0-RC1-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>antlr</groupId>
@@ -92,12 +98,6 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.14.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.smooks.cartridges</groupId>
-            <artifactId>smooks-misc-cartridge</artifactId>
-            <version>2.0.0-RC1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
