--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
         <gpg.skip>true</gpg.skip>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.antlr</groupId>
+                <artifactId>antlr-runtime</artifactId>
+                <version>3.3</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.smooks</groupId>
@@ -57,19 +67,19 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>antlr</groupId>
+            <groupId>org.antlr</groupId>
             <artifactId>stringtemplate</artifactId>
-            <version>2.2</version>
+            <version>4.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
-            <artifactId>antlr</artifactId>
-            <version>3.5.2</version>
+            <artifactId>antlr4</artifactId>
+            <version>4.13.0</version>
         </dependency>
         <dependency>
             <groupId>ognl</groupId>
             <artifactId>ognl</artifactId>
-            <version>3.3.2</version>
+            <version>3.3.4</version>
         </dependency>
         <dependency>
             <groupId>xalan</groupId>
@@ -81,6 +91,11 @@
                     <artifactId>xml-apis</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>xalan</groupId>
+            <artifactId>serializer</artifactId>
+            <version>2.7.3</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
