--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.smooks.cartridges</groupId>
     <artifactId>smooks-templating-cartridge</artifactId>
-    <version>2.0.0-RC2</version>
+    <version>2.0.0-RC3-SNAPSHOT</version>
 
     <name>Smooks Templating Cartridge</name>
     <url>https://www.smooks.org</url>
@@ -58,12 +58,12 @@
         <dependency>
             <groupId>org.smooks</groupId>
             <artifactId>smooks-core</artifactId>
-            <version>2.0.0-RC2</version>
+            <version>2.0.0-RC3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.smooks.cartridges</groupId>
             <artifactId>smooks-javabean-cartridge</artifactId>
-            <version>2.0.0-RC2</version>
+            <version>2.0.0-RC3-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
