--- a/pom.xml
+++ b/pom.xml
@@ -58,12 +58,12 @@
         <dependency>
             <groupId>org.smooks</groupId>
             <artifactId>smooks-core</artifactId>
-            <version>2.0.0-RC3</version>
+            <version>2.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.smooks.cartridges</groupId>
             <artifactId>smooks-javabean-cartridge</artifactId>
-            <version>2.0.0-RC3</version>
+            <version>2.0.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
